Bug 348616. Fix HTML button accessible and accessible objects when onclick is present. r=nian.liu